[gd_scene load_steps=6 format=3 uid="uid://lskje77wvt72"]

[ext_resource type="Script" path="res://scripts/state_machine/game_states/game_state_multiplayer_online_connection.gd" id="1_elv82"]

[sub_resource type="Theme" id="Theme_k7f0l"]
default_font_size = 80

[sub_resource type="Theme" id="Theme_sodlo"]
default_font_size = 50

[sub_resource type="Theme" id="Theme_5hvhg"]
default_font_size = 50

[sub_resource type="Theme" id="Theme_7ww65"]
default_font_size = 50

[node name="MultiplayerOnlineConnection" type="Node2D" node_paths=PackedStringArray("host_ip_label", "host_ip_line_edit")]
script = ExtResource("1_elv82")
host_ip_label = NodePath("Host/HostIpLabel")
host_ip_line_edit = NodePath("Client/ClientIpLineEdit")

[node name="BackgroundColorRect" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.720567, 0.852188, 0, 1)

[node name="HeadingLabel" type="Label" parent="."]
offset_left = 473.0
offset_top = 171.0
offset_right = 1653.0
offset_bottom = 281.0
theme = SubResource("Theme_k7f0l")
text = "Multiplayer Online Connection
"

[node name="Host" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 712.0
offset_top = 521.0
offset_right = 752.0
offset_bottom = 561.0
theme = SubResource("Theme_sodlo")

[node name="HostButton" type="Button" parent="Host"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Host"

[node name="HostLabel" type="Label" parent="Host"]
layout_mode = 0
offset_left = 139.0
offset_top = 3.0
offset_right = 199.0
offset_bottom = 72.0
text = "IP:"

[node name="HostIpLabel" type="Label" parent="Host"]
layout_mode = 0
offset_left = 206.0
offset_top = 4.0
offset_right = 320.0
offset_bottom = 73.0
text = "/"

[node name="Client" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 707.0
offset_top = 624.0
offset_right = 747.0
offset_bottom = 664.0
theme = SubResource("Theme_5hvhg")

[node name="ClientButton" type="Button" parent="Client"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Join"

[node name="ClientLabel" type="Label" parent="Client"]
layout_mode = 0
offset_left = 121.0
offset_top = 6.0
offset_right = 181.0
offset_bottom = 75.0
text = "IP:"

[node name="ClientIpLineEdit" type="LineEdit" parent="Client"]
layout_mode = 0
offset_left = 193.0
offset_top = 6.0
offset_right = 593.0
offset_bottom = 83.0
placeholder_text = "Enter IP"

[node name="BackButton" type="Button" parent="."]
offset_left = 28.0
offset_top = 970.0
offset_right = 151.0
offset_bottom = 1047.0
theme = SubResource("Theme_7ww65")
text = "Back"

[connection signal="button_up" from="Host/HostButton" to="." method="_on_host_button_up"]
[connection signal="button_up" from="Client/ClientButton" to="." method="_on_client_button_up"]
[connection signal="button_up" from="BackButton" to="." method="_on_back_button_up"]
